--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <!-- Button to open the chatbot -->
     <div id="chatbot-App"></div>
-
+    <h1><center>NEXO Chatbot</center></h1>
     <button class="chatbot-button" onclick="toggleChatbot()">
     <img src="./robot.svg" style="width: 30px; height: 30px;">
     </button>
