Modify function of chatbot
Chatbot has new icon and added function to show main menu after each command.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         right: 20px;
         padding: 11px 28px;
         font-size: 16px;
-        background-color: #eb5959e9;
+        background-color: #D0021B;
         color: white;
         border: none;
         border-radius: 5px;
@@ -35,7 +35,7 @@
 
     .chatbot-button:hover {
         cursor: help;
-        background-color: #e5c4c4;
+        background-color: #FF6C73;
     }
 
     #chatbot-App {
