--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     </button>
 
     <script>
+        // For displaying the chatbot using the chatbot button
         function toggleChatbot() {
             var chatbotDiv = document.getElementById('chatbot-App');
             chatbotDiv.style.display = (chatbotDiv.style.display === 'block') ? 'none' : 'block';
