--- a/contact/zoho_form.html
+++ b/contact/zoho_form.html
@@ -3,40 +3,266 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Request a Callback</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f9fa;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .form-container {
-            max-width: 800px;
-            width: 100%;
-            height: 100%;
-            padding: 20px;
-            box-sizing: border-box;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        iframe {
-            width: 100%;
-            height: calc(100% - 40px);
-            border: none;
-        }
-    </style>
+    <title>Zoho CRM Form</title>
 </head>
 <body>
-    <div class="form-container">
-        <iframe src="https://forms.office.com/r/piJLuzeMVz?embed=true" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen></iframe>
-    </div>
+
+<div id='crmWebToEntityForm' class='zcwf_lblLeft crmWebToEntityForm' style='background-color: white;color: black;max-width: 600px;'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+   <META HTTP-EQUIV ='content-type' CONTENT='text/html;charset=UTF-8'>
+   
+<form id='webform702179000000317294' action='https://crm.zoho.in/crm/WebToLeadForm' name=WebToLeads702179000000317294 method='POST' onSubmit='javascript:document.charset="UTF-8"; return checkMandatory702179000000317294()' accept-charset='UTF-8'>
+ <input type='text' style='display:none;' name='xnQsjsdp' value='9ec528a818f4f6586f6bab5b0b068a79cb91c8d8961acd7b76ecf60801c2744b'></input> 
+ <input type='hidden' name='zc_gad' id='zc_gad' value=''></input>
+ <input type='text' style='display:none;' name='xmIwtLD' value='21cc5aadcc8c7b21143742a24fb61a8ccbafac1a261eab5668bb8cd870a7aa8ca698caa1668da4de299d0d3031a8bcd3'></input> 
+ <input type='text'  style='display:none;' name='actionType' value='TGVhZHM='></input>
+ <input type='text' style='display:none;' name='returnURL' value='null' > </input>
+	 <!-- Do not remove this code. -->
+<style>
+html,body{
+	margin: 0px;
+}
+#crmWebToEntityForm.zcwf_lblLeft {
+	width:100%;
+	padding: 25px;
+	margin: 0 auto;
+	box-sizing: border-box;
+}
+#crmWebToEntityForm.zcwf_lblLeft * {
+	box-sizing: border-box;
+}
+#crmWebToEntityForm{text-align: left;}
+#crmWebToEntityForm * {
+	direction: ltr;
+}
+.zcwf_lblLeft .zcwf_title {
+	word-wrap: break-word;
+	padding: 0px 6px 10px;
+	font-weight:bold }.zcwf_lblLeft.cpT_primaryBtn:hover{
+	background: linear-gradient(#02acff 0,#006be4 100%) no-repeat padding-box !important;
+	box-shadow: 0 -2px 0 0 #0159b9 inset !important;
+	border: 0 !important;
+	color: #fff !important;
+	outline: 0 !important;
+}.zcwf_lblLeft .zcwf_col_fld input[type=text], input[type=password], .zcwf_lblLeft .zcwf_col_fld textarea {
+	width: 60%;
+	border: 1px solid #c0c6cc !important;
+	resize: vertical;
+	border-radius: 2px;
+	float: left;
+}
+.zcwf_lblLeft .zcwf_col_lab {
+	width: 30%;
+	word-break: break-word;
+	padding: 0px 6px 0px;
+	margin-right: 10px;
+	margin-top: 5px;
+	float: left;
+	min-height: 1px;
+}
+.zcwf_lblLeft .zcwf_col_fld {
+	float: left;
+	width: 68%;
+	padding: 0px 6px 0px;
+	position: relative;
+	margin-top: 5px;
+}
+.zcwf_lblLeft .zcwf_privacy{padding: 6px;}
+.zcwf_lblLeft .wfrm_fld_dpNn{display: none;}
+.dIB{display: inline-block;}
+.zcwf_lblLeft .zcwf_col_fld_slt {
+	width: 60%;
+	border: 1px solid #ccc;
+	background: #fff;
+	border-radius: 4px;
+	font-size: 13px;
+	float: left;
+	resize: vertical;
+	padding: 2px 5px;
+}
+.zcwf_lblLeft .zcwf_row:after, .zcwf_lblLeft .zcwf_col_fld:after {
+	content: '';
+	display: table;
+	clear: both;
+}
+.zcwf_lblLeft .zcwf_col_help {
+	float: left;
+	margin-left: 7px;
+	font-size: 13px;
+	max-width: 35%;
+	word-break: break-word;
+}
+.zcwf_lblLeft .zcwf_help_icon {
+	cursor: pointer;
+	width: 16px;
+	height: 16px;
+	display: inline-block;
+	background: #fff;
+	border: 1px solid #c0c6cc;
+	color: #c1c1c1;
+	text-align: center;
+	font-size: 11px;
+	line-height: 16px;
+	font-weight: bold;
+	border-radius: 50%;
+}
+.zcwf_lblLeft .zcwf_row {margin: 15px 0px;}
+.zcwf_lblLeft .formsubmit {
+	margin-right: 5px;
+	cursor: pointer;
+	color: var(--baseColor);
+	font-size: 13px;
+}
+.zcwf_lblLeft .zcwf_privacy_txt {
+	width: 90%;
+	color: rgb(0, 0, 0);
+	font-size: 13px;
+	font-family: Arial;
+	display: inline-block;
+	vertical-align: top;
+	color: var(--baseColor);
+	padding-top: 2px;
+	margin-left: 6px;
+}
+.zcwf_lblLeft .zcwf_button {
+	font-size: 13px;
+	color: var(--baseColor);
+	border: 1px solid #c0c6cc;
+	padding: 3px 9px;
+	border-radius: 4px;
+	cursor: pointer;
+	max-width: 120px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.zcwf_lblLeft .zcwf_tooltip_over{
+	position: relative;
+}
+.zcwf_lblLeft .zcwf_tooltip_ctn{
+	position: absolute;
+	background: #dedede;
+	padding: 3px 6px;
+	top: 3px;
+	border-radius: 4px;word-break: break-word;
+	min-width: 100px;
+	max-width: 150px;
+	color: var(--baseColor);
+	z-index: 100;
+}
+.zcwf_lblLeft .zcwf_ckbox{
+	float: left;
+}
+.zcwf_lblLeft .zcwf_file{
+	width: 55%;
+	box-sizing: border-box;
+	float: left;
+}
+.clearB:after{
+	content:'';
+	display: block;
+	clear: both;
+}
+@media all and (max-width: 600px) {
+	.zcwf_lblLeft .zcwf_col_lab, .zcwf_lblLeft .zcwf_col_fld {
+		width: auto;
+		float: none !important;
+	}
+	.zcwf_lblLeft .zcwf_col_help {width: 40%;}
+}
+</style>
+<div class='zcwf_title' style='max-width: 600px;color: black; font-family:Arial;'>Request a Callback</div><div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:13px; font-family: Arial;'><label for='Last_Name'>Name<span style='color:red;'>*</span></label></div><div class='zcwf_col_fld'><input type='text' id='Last_Name' name='Last Name' maxlength='80'></input><div class='zcwf_col_help'></div></div></div><div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:13px; font-family: Arial;'><label for='Email'>Email<span style='color:red;'>*</span></label></div><div class='zcwf_col_fld'><input type='text' ftype='email' autocomplete='false' id='Email' name='Email' crmlabel='' maxlength='100'></input><div class='zcwf_col_help'></div></div></div><div class='zcwf_row'><div class='zcwf_col_lab' style='font-size:13px; font-family: Arial;'><label for='Description'>Enter your query<span style='color:red;'>*</span></label></div><div class='zcwf_col_fld'><textarea id='Description' name='Description'></textarea><div class='zcwf_col_help'></div></div></div><div class='zcwf_row'><div class='zcwf_col_lab'></div><div class='zcwf_col_fld'><input type='submit' id='formsubmit' class='formsubmit zcwf_button' value='Submit' title='Submit'><input type='reset' class='zcwf_button' name='reset' value='Reset' title='Reset'></div></div>
+	<script>
+	function validateEmail702179000000317294()
+	{
+		var form = document.forms['WebToLeads702179000000317294'];
+		var emailFld = form.querySelectorAll('[ftype=email]');
+		var i;
+		for (i = 0; i < emailFld.length; i++)
+		{
+			var emailVal = emailFld[i].value;
+			if((emailVal.replace(/^\s+|\s+$/g, '')).length!=0 )
+			{
+				var atpos=emailVal.indexOf('@');
+				var dotpos=emailVal.lastIndexOf('.');
+				if (atpos<1 || dotpos<atpos+2 || dotpos+2>=emailVal.length)
+				{
+					alert('Please enter a valid email address. ');
+					emailFld[i].focus();
+					return false;
+				}
+			}
+		}
+		return true;
+	}
+
+ 	  function checkMandatory702179000000317294() {
+		var mndFileds = new Array('Last Name','Email','Description');
+		var fldLangVal = new Array('Name','Email','Enter\x20your\x20query');
+		for(i=0;i<mndFileds.length;i++) {
+		  var fieldObj=document.forms['WebToLeads702179000000317294'][mndFileds[i]];
+		  if(fieldObj) {
+			if (((fieldObj.value).replace(/^\s+|\s+$/g, '')).length==0) {
+			 if(fieldObj.type =='file')
+				{ 
+				 alert('Please select a file to upload.'); 
+				 fieldObj.focus(); 
+				 return false;
+				} 
+			alert(fldLangVal[i] +' cannot be empty.'); 
+   	   	  	  fieldObj.focus();
+   	   	  	  return false;
+			}  else if(fieldObj.nodeName=='SELECT') {
+  	   	   	 if(fieldObj.options[fieldObj.selectedIndex].value=='-None-') {
+				alert(fldLangVal[i] +' cannot be none.'); 
+				fieldObj.focus();
+				return false;
+			   }
+			} else if(fieldObj.type =='checkbox'){
+ 	 	 	 if(fieldObj.checked == false){
+				alert('Please accept  '+fldLangVal[i]);
+				fieldObj.focus();
+				return false;
+			   } 
+			 } 
+			 try {
+			     if(fieldObj.name == 'Last Name') {
+				name = fieldObj.value;
+ 	 	 	    }
+			} catch (e) {}
+		    }
+		}
+		if(!validateEmail702179000000317294()){return false;}
+		
+	var urlparams = new URLSearchParams( window.location.search);
+	if(urlparams.has('service') && (urlparams.get('service')==='smarturl')){
+		var webform = document.getElementById('webform702179000000317294');
+		 var service =  urlparams.get('service'); 
+		var smarturlfield = document.createElement('input');
+		smarturlfield.setAttribute('type','hidden');
+		smarturlfield.setAttribute('value',service);
+		smarturlfield.setAttribute('name','service');
+		webform.appendChild(smarturlfield); 
+	}
+document.querySelector('.crmWebToEntityForm .formsubmit').setAttribute('disabled', true);
+	}
+
+function tooltipShow702179000000317294(el){
+	var tooltip = el.nextElementSibling;
+	var tooltipDisplay = tooltip.style.display;
+	if(tooltipDisplay == 'none'){
+		var allTooltip = document.getElementsByClassName('zcwf_tooltip_over');
+		for(i=0; i<allTooltip.length; i++){
+			allTooltip[i].style.display='none';
+		}
+		tooltip.style.display = 'block';
+	}else{
+		tooltip.style.display='none';
+	}
+}
+</script>
+	</form>
+</div>
+
 </body>
 </html>
